# doge-home

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  deploy.sh
.github/workflows/: rust.yml
crossbuild/: Dockerfile
examples/: doorlock.rs  get_sign.rs  it_crashes.rs  smarthome.rs
src/: event.rs  lib.rs  main.rs  smarthome.rs
src/bindings/: cli.rs  gpio.rs  message.rs  mod.rs  tcp_binding.rs  tcp_connection.rs  tcp_server.rs  tcpconnection.rs  tcpserver.rs
src/bindings/gpio/: gpio_controller.rs  mem.rs  output_pin.rs
src/devices/: doorlock.rs  mod.rs
tests/: proptest_example.rs  smarthome.rs  test_example.rs
