[package]
name = "doge_home"
version = "0.1.0"
authors = ["BajacDev <baptiste.jacquemot@orange.fr>"]
edition = "2018"

[[bin]]
name = "doge_home"
path = "src/main.rs"

[lib]
name = "doge_home"
path = "src/lib.rs"


[dependencies]
libc = "0.2"

# klee dependencies

[dependencies.klee-sys]
git = "https://gitlab.henriktjader.com/pln/klee-sys.git"
version = "0.2.0"
optional = true

[dependencies.panic-klee]
git = "https://gitlab.henriktjader.com/pln/panic-klee.git"
version = "0.1.0"
optional = true

[features]
default = ["klee-analysis"]
klee-analysis = ["klee-sys/klee-analysis", "klee-sys", "panic-klee"]

[profile.dev]
panic = "abort"
incremental = false # better optimization
lto = true          # better optimization
codegen-units = 1   # better optimization

[profile.release]
panic = "abort"
debug = true        # better debugging
incremental = false # better optimization
lto = true          # better optimization
codegen-units = 1   # better optimization
